# SiriusVk

./: .gitmodules  CMakeLists.txt  README.md  compile_shaders.bat
src/: CMakeLists.txt  resources.h  sirius.rc
src/game/: CMakeLists.txt  app.cpp  app.h
src/main/: CMakeLists.txt  main.cpp
src/sirius/: CMakeLists.txt
src/sirius/core/: CMakeLists.txt  entrypoint_engine.cpp  entrypoint_engine.h  fsm.cpp  fsm.h  object.cpp  object.h  types.h  utils.cpp  utils.h
src/sirius/graphics/: CMakeLists.txt  asset_loader.cpp  asset_loader.h  camera.cpp  camera.h  descriptors.cpp  descriptors.h  device.cpp  device.h  initializers.cpp  initializers.h  materials.cpp  materials.h  model.cpp  model.h  pipeline.cpp  pipeline.h  pipelines.cpp  pipelines.h  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h  types.h  vkRenderer.cpp  vkRenderer.h
src/sirius/input/: CMakeLists.txt  input_manager.cpp  input_manager.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
src/sirius/shaders/: CMakeLists.txt  colored_triangle_mesh.vert  colored_triangle_mesh.vert.spv  gradient.comp  gradient_color.comp  input_structures.glsl  simple_shader.vert  sky.comp  textured_image.frag
src/sirius/window/: CMakeLists.txt  window.cpp  window.h  wndProc.h
